--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.formatting.provider": "yapf"
+    "python.formatting.provider": "yapf",
+    "python.pythonPath": "/Users/rusakov/miniconda3/envs/gf/bin/python",
+    "jupyter.experiments.optOutFrom": [
+        "NativeNotebookEditor"
+    ],
 }
